--- a/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/200.sql-execution-plan/100.introduction-to-sql-execution-plans.md
+++ b/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/200.sql-execution-plan/100.introduction-to-sql-execution-plans.md
@@ -44,7 +44,7 @@ dml_statement:
 
 `FORMAT` 选项可用于选择输出格式。`TRADITIONAL` 表示以表格格式显示输出，这也是默认设置。`JSON` 表示以 `JSON` 格式显示信息。
 
-使用 `EXPLAIN PARTITITIONS` 也可用于检查涉及分区表的查询。如果检查针对非分区表的查询，则不会产生错误，但 `PARTIONS` 列的值始终为 `NULL`。
+使用 `EXPLAIN PARTITIONS` 也可用于检查涉及分区表的查询。如果检查针对非分区表的查询，则不会产生错误，但 `PARTITIONS` 列的值始终为 `NULL`。
 
 特别地，用户可以使用 `INTO table_name` SQL 语句将 `EXPLAIN` 的计划信息保存到指定表内，默认查询到 `PLAN_TABLE` 表内；使用 `SET statement_id` 语句可以将当前查询使用字符串标记，以方便后续查询该 SQL 的计划信息，默认使用空字符串作为信息标记。更多详细的信息，请参见 [EXPLAIN](../../../500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/5300.explain-of-mysql-mode.md)。
 
