--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/2400.create-table-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/2400.create-table-of-oracle-mode.md
@@ -60,7 +60,7 @@ table_option_list:
     table_option [ table_option ...]
 
 table_option:
-      table_group
+      TABLEGROUP = tablegroup_name
     | block_size
     | compression
     | comment
@@ -197,7 +197,7 @@ on_commit_option:
 | DEFAULT expression          | 指定列的默认值。`expression` 支持包含 Sequence 的函数表达式。    |
 | BLOCK_SIZE                  | 指定表的微块大小。     |
 | COMPRESSION                 | 指定存储格式 Flat/Encoding 以及压缩方法，对应如下： <ul><li> `nocompress`：使用 Flat 格式，不进行压缩。</li>   <li> `compress [basic]`：使用 Flat 格式和 lz4_1.0 压缩方法。</li>   <li> `compress for oltp`：使用 Flat 格式和 zstd_1.3.8 压缩方法。</li>   <li>  `query low` 或者 `query high`：使用 Encoding 格式和  lz4_1.0 压缩方法。</li>   <li>  `archive low` 或者 `archive high`：使用 Encoding 格式和 zstd_1.3.8 压缩方法。</li> </ul>   |
-| table_group            | 指定表所属的 Table Group 属性。    |
+| tablegroup_name           | 指定表所属的 Table Group。    |
 | VISIBLE                     | 表示列可见，是默认的列状态。|
 | INVISIBLE                   | 表示列不可见，当将一个列设置为 `INVISIBLE` 后，在查询时该列将不会被默认显示。|
 | comment                     | 注释。     |
