--- a/zh-CN/700.reference/300.performance-tuning-guide/500.sql-optimization/200.sql-execution-plan/100.introduction-to-sql-execution-plans.md
+++ b/zh-CN/700.reference/300.performance-tuning-guide/500.sql-optimization/200.sql-execution-plan/100.introduction-to-sql-execution-plans.md
@@ -44,7 +44,7 @@ dml_statement:
 
 `FORMAT` 选项可用于选择输出格式。`TRADITIONAL` 表示以表格格式显示输出，这也是默认设置。`JSON` 表示以 `JSON` 格式显示信息。
 
-使用 `EXPLAIN PARTITITIONS` 也可用于检查涉及分区表的查询。如果检查针对非分区表的查询，则不会产生错误，但 `PARTIONS` 列的值始终为 `NULL`。
+使用 `EXPLAIN PARTITIONS` 也可用于检查涉及分区表的查询。如果检查针对非分区表的查询，则不会产生错误，但 `PARTITIONS` 列的值始终为 `NULL`。
 
 对于复杂的执行计划，可以使用 `PRETTY` 或者 `PRETTY_COLOR` 选项将计划树中的父节点和子节点使用树线或彩色树线连接起来，使得执行计划展示更方便阅读。示例如下：
 
