--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/2600.create-table-of-mysql-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/2600.create-table-of-mysql-mode.md
@@ -77,7 +77,7 @@ table_option_list:
 table_option:
       [DEFAULT] {CHARSET | CHARACTER SET} [=] charset_name
     | [DEFAULT] COLLATE [=] collation_name
-    | table_tablegroup
+    | TABLEGROUP = tablegroup_name
     | block_size
     | compression
     | AUTO_INCREMENT [=] INT_VALUE
@@ -149,7 +149,7 @@ partition_count | subpartition_count:
 | COMPRESSION                                          | 指定表的压缩算法，取值如下： <ul><li> `none`：不使用压缩算法。</li>   <li> `lz4_1.0`: 使用 `lz4` 压缩算法。</li>   <li> `zstd_1.0`: 使用 `zstd` 压缩算法。</li>  <li> `snappy_1.0`: 使用 `snappy` 压缩算法。</li> </ul>    |
 | CHARSET \| CHARACTER SET                             | 指定表中列的默认字符集，可使用字符集如下： <ul><li> `utf8` </li>  <li> `utf8mb4`  </li> <li> `gbk` </li>  <li> `utf16` </li>  <li>`gb18030` </li></ul>     |
 | COLLATE                                              | 指定表中列的默认字符序，可使用字符序如下： <ul><li> `utf8_bin` </li>  <li> `utf8_general_ci` </li>  <li> `utf8_unicode_ci` </li>  <li> `gbk_bin`  </li> <li> `gbk_chinese_ci` </li>  <li> `utf8mb4_general_ci` </li>  <li> `utf8mb4__general_cs` </li>  <li> `utf8mb4_bin`  </li> <li> `utf8mb4_unicode_ci` </li>  <li> `utf16_general_ci`  </li> <li>`utf16_bin`</li>   <li> `utf16_unicode_ci` </li>  <li> `gb18030_chinese_ci` </li>  <li> `gb18030_bin` </li></ul>   |
-| table_tablegroup                                     | 指定表所属的 `tablegroup`。   |
+| tablegroup_name                                     | 指定表所属的 Table Group。   |
 | AUTO_INCREMENT                                       | 指定表中自增列的初始值。OceanBase 数据库支持使用自增列作为分区键。  |
 | comment                                              | 注释。     |
 | PCTFREE                                              | 指定宏块保留空间百分比。   |
