--- a/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/200.sql-execution-plan/200.execution-plan-operator/1500.subplan-scan.md
+++ b/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/200.sql-execution-plan/200.execution-plan-operator/1500.subplan-scan.md
@@ -2,7 +2,7 @@
 
 `SUBPLAN SCAN` 算子用于展示优化器从哪个视图访问数据。
 
-当查询的 `FROM TABLE` 为视图时，执行计划中会分配 `SUBPLAN SCAN` 算子。`SUBPLAN SCAN` 算子类似于 `TABLE SCAN` 算子，但它不从基表读取数据，而是读取孩子节点的输出数据。
+当查询的 `FROM TABLE` 为视图时，执行计划中会分配 `SUBPLAN SCAN` 算子。`SUBPLAN SCAN` 算子类似于 `TABLE SCAN` 算子，但它不从基表读取数据，而是读取子节点的输出数据。
 
 如下示例中，Q1 查询中 1 号算子为视图中查询生成，0 号算子 `SUBPLAN SCAN` 读取 1 号算子并输出。
 
