--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/2700.create-tablegroup-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/2700.create-tablegroup-of-mysql-mode.md
@@ -6,6 +6,7 @@
 
 表组主要用于创建一组具有相同分布特征的表，具有相同分布特征的表在进行连接操作时，可以在本地进行，避免跨节点的数据请求。
 
+创建表组需要当前用户拥有全局 `CREATE` 权限。
 
 ## 语法
 
@@ -22,7 +23,7 @@ tablegroup_option:
 |           **参数**           |    **描述**    |
 |----------------------------|---------------------------------|
 | tablegroup_name            | 表组名称，最长 64 个字符，字符只能有大小写英文字母，数字和下划线，而且必须以字母或下划线开头，并且不能使用 OceanBase 数据库的关键字。如果要创建的表组名称已存在，并且没有指定 `IF NOT EXISTS`，则会出现错误。    |
-| SHARDING   | 表组的属性。如果不指定 `SHARDING` 属性，则默认创建 `ADAPTIVE` 的表组。`SHARDING` 取值如下：<ul><li>`NONE`：对加入表组的表没有限制。</li><li>`PARTITION`：加入表组的表对应的一级分区，需要与表组中所有表的一级分区的分区方式一致，包括分区类型、分区个数和分区 Value。</li><li>`ADAPTIVE`：加入表组的表对应的一级分区和二级分区，需要与表组中所有表的一级分区和二级分区的分区方式一致，包括分区类型、分区个数和分区 Value。</li></ul>相同的分区方式包括：<ul><li>分区类型相同（例如都是 Hash+Range 分区）。</li><li>如果是 Hash 分区，要求引用的列数相同，并且分区个数相同。</li><li>如果是 Range 分区，要求引用的列数相同，并且分区数相同，Range 分割点相同。</li></ul>对于二级分区，根据其分区类型，要求和上述一致。    |
+| SHARDING   | 表组的属性。如果不指定 `SHARDING` 属性，则默认创建 `ADAPTIVE` 的表组。`SHARDING` 取值如下：<ul><li>`NONE`：对加入表组的表没有限制。</li><li>`PARTITION`：加入表组的表对应的一级分区，需要与表组中所有表的一级分区的分区方式一致，包括分区类型、分区个数和分区值。</li><li>`ADAPTIVE`：加入表组的表对应的一级分区和二级分区，需要与表组中所有表的一级分区和二级分区的分区方式一致，包括分区类型、分区个数和分区值。加入表组中的表必须只能为同一类分区表（一级分区表或者二级分区表）</li></ul>相同的分区方式包括：<ul><li>分区类型相同（例如都是 Hash+Range 分区）。</li><li>如果是 Hash 分区，要求引用的列数相同，并且分区个数相同。</li><li>如果是 Range 分区，要求引用的列数相同，并且分区数相同，Range 分割点相同。</li></ul>对于二级分区，根据其分区类型，要求和上述一致。    |
 
 ## 示例
 
