--- a/zh-CN/700.reference/700.system-views/210.differences-of-views-between-3.x-and-4.x.md
+++ b/zh-CN/700.reference/700.system-views/210.differences-of-views-between-3.x-and-4.x.md
@@ -76,7 +76,7 @@
     <td>数据库信息 </td>
   </tr>
     <tr>
-    <td rowspan="8">__all_table<br>__all_virtual_table </td>
+    <td rowspan="8">gv$table(4.x 废弃)<br>__all_table<br>__all_virtual_table </td>
     <td>CDB_OBJECTS<br>CDB_TABLES<br>CDB_INDEXES<br>CDB_IND_COLUMNS <br>CDB_PART_TABLES<br>CDB_TAB_PARTITIONS</td>
     <td>系统租户下访问所有租户的 Schema 信息 </td>
   </tr>
