--- a/zh-CN/100.learn-more-about-oceanbase/400.compatibility-with-oracle/100.overview-of-compatibility-with-oracle.md
+++ b/zh-CN/100.learn-more-about-oceanbase/400.compatibility-with-oracle/100.overview-of-compatibility-with-oracle.md
@@ -157,7 +157,7 @@ OceanBase 数据库兼容了部分 Oracle 数据库的系统视图，其中：
 
 关于兼容的详细视图列表请参见 [系统视图](../400.compatibility-with-oracle/400.system-view.md)。
 
-更多系统视图的字段说明信息请参考《参考指南（Oracle 模式）》文档中 [系统视图](../../700.reference/700.system-views/500.system-view-of-oracle-mode/100.overview-of-oracle-mode.md) 章节。
+更多系统视图的说明信息请参考《参考指南》文档中 [系统视图](../../700.reference/700.system-views/200.system-view-overview.md) 章节。
 
 ## 字符集和字符序
 
