--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/300.character-set-and-collation-of-mysql-mode/300.collation-of-mysql-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/300.character-set-and-collation-of-mysql-mode/300.collation-of-mysql-mode.md
@@ -48,6 +48,12 @@ obclient> SHOW COLLATION;
 11 rows in set 
 ```
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>OceanBase 数据库社区版暂不支持 <code>utf8mb4_unicode_ci</code> 和 <code>utf16_unicode_ci</code>。</p>
+</main>
+
+
 字符序具有以下一般特征：
 
 * 两个不同的字符集不能有相同的字符序。
