--- a/zh-CN/700.reference/700.system-views/300.system-view-of-sys-tenant/200.dictionary-view-of-sys-tenant/16900.oceanbase-dba_scheduler_jobs-of-sys-tenant.md
+++ b/zh-CN/700.reference/700.system-views/300.system-view-of-sys-tenant/200.dictionary-view-of-sys-tenant/16900.oceanbase-dba_scheduler_jobs-of-sys-tenant.md
@@ -15,65 +15,65 @@
 | ------ | ------ | ------ | ------ |
 | OWNER                         | varchar(128) | NO   | 调度程序作业的所有者|
 | JOB_NAME                      | varchar(128) | NO   | 调度程序作业的名称  |
-| JOB_SUBNAME                   | varchar(128) | NO   |  |
-| JOB_STYLE                     | varchar(17)  | YES  |  |
-| JOB_CREATOR                   | varchar(128) | NO   |  |
-| CLIENT_ID                     | varchar(65)  | NO   |  |
-| GLOBAL_UID                    | varchar(33)  | NO   |  |
-| PROGRAM_OWNER                 | text         | NO   |  |
+| JOB_SUBNAME                   | varchar(128) | NO   | 调度程序作业的子名称 |
+| JOB_STYLE                     | varchar(17)  | YES  | 作业风格：<ul><li>REGULAR：指在指定的时间点执行任务。  </li><li>LIGHTWEIGHT：指在指定的时间间隔内执行任务。 </li></ul>|
+| JOB_CREATOR                   | varchar(128) | NO   | 调度程序作业创建者 |
+| CLIENT_ID                     | varchar(65)  | NO   | 创建作业的用户的客户端标识符 |
+| GLOBAL_UID                    | varchar(33)  | NO   | 创建作业的用户的全局用户标识符 |
+| PROGRAM_OWNER                 | text         | NO   | 与作业相关的程序的所有者|
 | PROGRAM_NAME                  | text         | YES  | 与作业相关的程序名称 |
-| JOB_TYPE                      | varchar(16)  | YES  |  |
-| JOB_ACTION                    | text         | YES  |  |
-| NUMBER_OF_ARGUMENTS           | bigint(20)   | YES  |  |
-| SCHEDULE_OWNER                | text         | NO   |  |
-| SCHEDULE_NAME                 | text         | NO   |  |
-| SCHEDULE_TYPE                 | varchar(12)  | NO   |  |
-| START_DATE                    | datetime(6)  | YES  |  |
-| REPEAT_INTERVAL               | text         | YES  |  |
-| EVENT_QUEUE_OWNER             | varchar(128) | NO   |  |
-| EVENT_QUEUE_NAME              | varchar(128) | NO   |  |
-| EVENT_QUEUE_AGENT             | text         | NO   |  |
-| EVENT_CONDITION               | text         | NO   |  |
-| EVENT_RULE                    | varchar(261) | NO   |  |
-| FILE_WATCHER_OWNER            | varchar(261) | NO   |  |
-| FILE_WATCHER_NAME             | varchar(261) | NO   |  |
-| END_DATE                      | datetime(6)  | YES  |  |
-| JOB_CLASS                     | varchar(128) | YES  |  |
-| ENABLED                       | varchar(5)   | YES  | 指示作业是否启用：<li>TRUE<li>FALSE |
-| AUTO_DROP                     | varchar(5)   | YES  |  |
-| RESTART_ON_RECOVERY           | varchar(5)   | NO   |  |
-| RESTART_ON_FAILURE            | varchar(5)   | NO   |  |
+| JOB_TYPE                      | varchar(16)  | YES  | 作业操作类型：<ul><li>PLSQL_BLOCK  </li><li>STORED_PROCEDURE </li><li>EXECUTABLE </li><li>CHAIN </li></ul> |
+| JOB_ACTION                    | text         | YES  | 内联作业操作 |
+| NUMBER_OF_ARGUMENTS           | bigint(20)   | YES  | 作业参数的内联数量 |
+| SCHEDULE_OWNER                | text         | NO   | 作业使用的计划的所有者 |
+| SCHEDULE_NAME                 | text         | NO   | 作业使用的计划名称 |
+| SCHEDULE_TYPE                 | varchar(12)  | NO   | 作业使用的计划类型：<ul><li>IMMEDIATE：开始日期和重复间隔为 NULL  </li><li>ONCE：重复间隔为 NULL </li><li>PLSQL：PL/SQL 表达式用作时间表 </li><li>CALENDAR：日历表达式用作日程表</li><li>EVENT：活动日程 </li><li>NAMED：命名时间表 </li><li>WINDOW：用作时间表的窗口 </li><li>WINDOW_GROUP：用作时间表的窗口组 </li></ul> |
+| START_DATE                    | datetime(6)  | YES  | 作业的原始计划开始日期 |
+| REPEAT_INTERVAL               | text         | YES  | 内联计划 PL/SQL 表达式或日历字符串 |
+| EVENT_QUEUE_OWNER             | varchar(128) | NO   | 将向其中引发事件的源队列的所有者 |
+| EVENT_QUEUE_NAME              | varchar(128) | NO   | 将向其中引发事件的源队列的名称 |
+| EVENT_QUEUE_AGENT             | text         | NO   | 用户在事件源队列上使用的 AQ 代理的名称 |
+| EVENT_CONDITION               | text         | NO   | 源队列上事件的订阅规则 |
+| EVENT_RULE                    | varchar(261) | NO   | 协调器用来触发基于事件的作业的规则名称 |
+| FILE_WATCHER_OWNER            | varchar(261) | NO   | 该作业所基于的文件观察器的所有者 |
+| FILE_WATCHER_NAME             | varchar(261) | NO   | 该作业所基于的文件观察器的名称 |
+| END_DATE                      | datetime(6)  | YES  | 作业将不再运行的日期 |
+| JOB_CLASS                     | varchar(128) | YES  | 与作业关联的作业类别的名称 |
+| ENABLED                       | varchar(5)   | YES  | 指示作业是否启用：<ul><li>TRUE  </li><li>FALSE </li></ul> |
+| AUTO_DROP                     | varchar(5)   | YES  | 指示作业完成后是否被删除：<ul><li>TRUE  </li><li>FALSE </li></ul>  |
+| RESTART_ON_RECOVERY           | varchar(5)   | NO   | 当集群重启时，该指示作业是否重启：<ul><li>TRUE  </li><li>FALSE </li></ul> |
+| RESTART_ON_FAILURE            | varchar(5)   | NO   | 当作业执行失败时，该指示作业是否重启：<ul><li>TRUE  </li><li>FALSE </li></ul> |
 | STATE                         | varchar(15)  | YES  | 工作现状：<li>DISABLED<li>RETRY SCHEDULED<li>SCHEDULED<li>BLOCKED<li>RUNNING<li>COMPLETED<li>BROKEN<li>FAILED<li>REMOTE<li>RESOURCE_UNAVAILABLE<li>SUCCEEDED<li>CHAIN_STALLED |
-| JOB_PRIORITY                  | bigint(0)    | NO   |  |
-| RUN_COUNT                     | bigint(20)   | YES  |  |
-| MAX_RUNS                      | bigint(0)    | NO   |  |
-| FAILURE_COUNT                 | bigint(20)   | YES  |  |
-| MAX_FAILURES                  | bigint(0)    | NO   |  |
-| RETRY_COUNT                   | bigint(20)   | YES  |  |
+| JOB_PRIORITY                  | bigint(0)    | NO   | 该工作相对于同类其他工作的优先级 |
+| RUN_COUNT                     | bigint(20)   | YES  | 作业已运行的次数 |
+| MAX_RUNS                      | bigint(0)    | NO   | 作业计划运行的最大次数 |
+| FAILURE_COUNT                 | bigint(20)   | YES  | 作业运行失败的次数 |
+| MAX_FAILURES                  | bigint(0)    | NO   | 在被标记为损坏之前允许作业失败的次数 |
+| RETRY_COUNT                   | bigint(20)   | YES  | 作业重试的次数 |
 | LAST_START_DATE               | datetime(6)  | YES  | 作业开始运行的最后日期 |
-| LAST_RUN_DURATION             | bigint(20)   | YES  |  |
+| LAST_RUN_DURATION             | bigint(20)   | YES  | 上次运行期间完成作业所花费的时间 |
 | NEXT_RUN_DATE                 | datetime(6)  | NO   | 作业计划运行的下一个日期 |
-| SCHEDULE_LIMIT                | bigint(0)    | NO   |  |
-| MAX_RUN_DURATION              | bigint(20)   | YES  |  |
-| LOGGING_LEVEL                 | varchar(11)  | NO   |  |
-| STORE_OUTPUT                  | varchar(5)   | NO   |  |
-| STOP_ON_WINDOW_CLOSE          | varchar(5)   | NO   |  |
-| INSTANCE_STICKINESS           | varchar(5)   | NO   |  |
-| RAISE_EVENTS                  | text         | NO   |  |
-| SYSTEM                        | varchar(5)   | NO   |  |
-| JOB_WEIGHT                    | bigint(0)    | NO   |  |
-| NLS_ENV                       | text         | YES  |  |
-| SOURCE                        | varchar(128) | NO   |  |
-| NUMBER_OF_DESTINATIONS        | bigint(0)    | NO   |  |
-| DESTINATION_OWNER             | varchar(261) | NO   |  |
-| DESTINATION                   | varchar(261) | NO   |  |
-| CREDENTIAL_OWNER              | varchar(128) | NO   |  |
-| CREDENTIAL_NAME               | varchar(128) | NO   |  |
+| SCHEDULE_LIMIT                | bigint(0)    | NO   | 尚未运行的作业将被重新安排的时间 |
+| MAX_RUN_DURATION              | bigint(20)   | YES  | 允许作业运行的最长时间 |
+| LOGGING_LEVEL                 | varchar(11)  | NO   | 与作业相关的日志记录：<ul><li>OFF  </li><li>RUNS </li><li>FAILED RUNS </li><li>FULL </li></ul> |
+| STORE_OUTPUT                  | varchar(5)   | NO   | 作业执行的输出是否存储到数据库：<ul><li>TRUE  </li><li>FALSE </li></ul> |
+| STOP_ON_WINDOW_CLOSE          | varchar(5)   | NO   | 当作业所属的调度窗口关闭时，是否停止该作业的执行：<ul><li>TRUE  </li><li>FALSE </li></ul> |
+| INSTANCE_STICKINESS           | varchar(5)   | NO   | 作业是否具有实例黏着性：<ul><li>TRUE  </li><li>FALSE </li></ul> |
+| RAISE_EVENTS                  | text         | NO   | 该职位相关的工作事件列表：<ul><li>JOB_STARTED  </li><li>JOB_SUCCEEDED </li><li>JOB_FAILED </li><li>JOB_BROKEN </li><li>JOB_COMPLETED </li><li>JOB_STOPPED </li><li>JOB_SCH_LIM_REACHED </li><li>JOB_DISABLED </li><li>JOB_CHAIN_STALLED </li><li>JOB_OVER_MAX_DUR </li></ul> |
+| SYSTEM                        | varchar(5)   | NO   | 指示作业是否是系统作业：<ul><li>TRUE  </li><li>FALSE </li></ul> |
+| JOB_WEIGHT                    | bigint(0)    | NO   | 作业的权重，用于指定作业在调度时的优先级。 |
+| NLS_ENV                       | text         | YES  | 作业的国家语言环境设置。 |
+| SOURCE                        | varchar(128) | NO   | 作业的源代码或脚本。 |
+| NUMBER_OF_DESTINATIONS        | bigint(0)    | NO   | 作业的目标数量。 |
+| DESTINATION_OWNER             | varchar(261) | NO   | 作业目标的所有者。 |
+| DESTINATION                   | varchar(261) | NO   | 作业的目标，即作业要执行的对象或位置。 |
+| CREDENTIAL_OWNER              | varchar(128) | NO   | 凭证的所有者。 |
+| CREDENTIAL_NAME               | varchar(128) | NO   | 凭证的名称。 |
 | INSTANCE_ID                   | bigint(21)   | YES  | 用户请求作业在其上运行的实例 |
-| DEFERRED_DROP                 | varchar(5)   | NO   |  |
-| ALLOW_RUNS_IN_RESTRICTED_MODE | varchar(5)   | NO   |  |
-| COMMENTS                      | text         | YES  |  |
-| FLAGS                         | bigint(20)   | NO   |  |
-| RESTARTABLE                   | varchar(5)   | NO   |  |
-| CONNECT_CREDENTIAL_OWNER      | varchar(128) | NO   |  |
-| CONNECT_CREDENTIAL_NAME       | varchar(128) | NO   |  |
+| DEFERRED_DROP                 | varchar(5)   | NO   | 作业是否延迟删除。 |
+| ALLOW_RUNS_IN_RESTRICTED_MODE | varchar(5)   | NO   | 作业是否允许在受限模式下运行。 |
+| COMMENTS                      | text         | YES  | 作业的注释或描述信息。 |
+| FLAGS                         | bigint(20)   | NO   | 作业的标志位。 |
+| RESTARTABLE                   | varchar(5)   | NO   | 作业是否可重启。 |
+| CONNECT_CREDENTIAL_OWNER      | varchar(128) | NO   | 连接凭证的所有者。 |
+| CONNECT_CREDENTIAL_NAME       | varchar(128) | NO   | 连接凭证的名称。 |
