--- a/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/200.dictionary-view-of-oracle-mode/20200.dba_ob_backup_set_files-of-oracle-mode.md
+++ b/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/200.dictionary-view-of-oracle-mode/20200.dba_ob_backup_set_files-of-oracle-mode.md
@@ -28,7 +28,7 @@
 | START_REPLAY_SCN | NUMBER(38) | NO | 备份集依赖日志回放 SCN |
 | START_REPLAY_SCN_DISPLAY | TIMESTAMP(9) | NO | 备份集依赖日志回放时间戳位点 |
 | MIN_RESTORE_SCN | NUMBER(38)  | NO | 备份集最新可恢复 SCN |
-| MIN_RESTORE_SCN_DISPLAY | TIMESTAMP(9) | NO | 备份集最小可恢复时间戳位点 |
+| MIN_RESTORE_SCN_DISPLAY | VARCHAR2(4096) | NO | 备份集最小可恢复时间戳位点 |
 | INPUT_BYTES | NUMBER(38) | YES | 输入字节数 |
 | OUTPUT_BYTES | NUMBER(38) | YES | 输出字节数 |
 | OUTPUT_RATE_BYTES | NUMBER | NO | 每秒输出字节数 |
