--- a/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/200.dictionary-view-of-oracle-mode/25300.dba_ob_table_locations-of-oracle-mode.md
+++ b/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/200.dictionary-view-of-oracle-mode/25300.dba_ob_table_locations-of-oracle-mode.md
@@ -20,3 +20,8 @@
 | SVR_PORT | NUMBER | NO | 副本位置的 PORT 信息 |
 | ROLE | VARCHAR2(8) | NO | 副本角色 |
 | REPLICA_TYPE | VARCHAR2(18) | NO | 日志流类型，当前仅支持 `FULL`，即：全功能类型 |
+| DUPLICATE_SCOPE | VARCHAR2(7) | NO | 表明这个表是否为复制表，取值为：
+| OBJECT_ID | NUMBER(38) | NO | 分区对应的对象 ID<main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.2.0 版本开始引入</p></main> |
+| TABLEGROUP_NAME | VARCHAR2(128) | NO | 表对应 Table Group 的名称<main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.2.0 版本开始引入</p></main> |
+| TABLEGROUP_ID | NUMBER(38) | NO | 表对应 Table Group 的 ID<main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.2.0 版本开始引入</p></main> |
+| SHARDING | VARCHAR2(10) | NO | 表对应 Table Group 的 Sharding 属性（均衡模式）<main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.2.0 版本开始引入</p></main> |
