--- a/zh-CN/700.reference/700.system-views/300.system-view-of-sys-tenant/200.dictionary-view-of-sys-tenant/15400.oceanbase-dba_ob_backup_storage_info_history-of-sys-tenant.md
+++ b/zh-CN/700.reference/700.system-views/300.system-view-of-sys-tenant/200.dictionary-view-of-sys-tenant/15400.oceanbase-dba_ob_backup_storage_info_history-of-sys-tenant.md
@@ -17,7 +17,7 @@
 | PATH | varchar(1024) | NO | 备份的根路径 |
 | ENDPOINT | varchar(256) | NO | 对象存储访问需要设置的 HOST |
 | DEST_ID | bigint(20) | YES | 备份目的地的编号 |
-| DEST_TYPE | varchar(64) | YES | 备份目的地的类型：日志归档 |
+| DEST_TYPE | varchar(64) | YES | 备份目的地的类型，包括：<li>日志归档<li>数据备份 |
 | AUTHORIZATION | varchar(1024) | NO | 对象存储的授权信息 |
 | EXTENSION | varchar(512) | NO | 备份目的地的其余参数 |
 | CHECK_FILE_NAME | varchar(256) | YES | 连通性的校验文件名 |
