--- a/zh-CN/700.reference/700.system-views/300.system-view-of-sys-tenant/300.performance-view-of-sys-tenant/1300.gv-ob_units-of-sys-tenant.md
+++ b/zh-CN/700.reference/700.system-views/300.system-view-of-sys-tenant/300.performance-view-of-sys-tenant/1300.gv-ob_units-of-sys-tenant.md
@@ -18,6 +18,8 @@
 | UNIT_ID          | bigint(20)   | NO         | Unit ID                                                                |
 | TENANT_ID        | bigint(20)   | NO         | Unit 所属的租户 ID                                                          |
 | ZONE             | varchar(128) | NO         | Zone 名称                                                                |
+| ZONE_TYPE | varchar(128) | NO | Unit 所在 Zone 的 ZoneType，可能有以下几种取值。<ul><li>NULL ：表示该列值无效，Server 重启场景会短暂出现一段时间无效值</li><li>ReadWrite：读写 Zone</li><li>Encryption：加密 Zone</li></ul>|
+| REGION | varchar(128) | NO | Unit 所在 Zone 所属的 Region 名，可能取值为：<ul><li>NULL：表示该列值无效，Server 重启场景会短暂出现一段时间无效值   </li><li>Region：Region 名称  </li></ul>|
 | MAX_CPU          | double       | NO         | CPU 规格上限                                                               |
 | MIN_CPU          | double       | NO         | CPU 规格下限                                                               |
 | MEMORY_SIZE       | bigint(20)   | NO         | 内存大小，单位：字节                                                           |
