--- a/zh-CN/700.reference/700.system-views/300.system-view-of-sys-tenant/300.performance-view-of-sys-tenant/4500.v-ob_compaction_progress-of-sys-tenant.md
+++ b/zh-CN/700.reference/700.system-views/300.system-view-of-sys-tenant/300.performance-view-of-sys-tenant/4500.v-ob_compaction_progress-of-sys-tenant.md
@@ -16,7 +16,7 @@
 |SVR_IP    |varchar(46)    |NO   |服务器IP    |
 |SVR_PORT    |bigint(20)    |NO   |服务器端口号    |
 |TENANT_ID    |bigint(20)    |NO   |租户ID    |
-|TYPE    |varchar(64)    |NO   |compaction的类型 <ul><li> MINI：转储/L0 compaction，Memtable通过转储变成SSTable </li><li>MAJOR：合并 </li><li>MINOR：L1 compaction，多个Mini SSTable合成一个</li></ul>    |
+|TYPE    |varchar(64)    |NO   |compaction的类型 <ul><li> MINI：转储/L0 compaction，MemTable通过转储变成SSTable </li><li>MAJOR：合并 </li><li>MINOR：L1 compaction，多个Mini SSTable合成一个</li></ul>    |
 |ZONE    |varchar(128)    |NO   |Zone信息    |
 |COMPACTION_SCN    |bigint(20) unsigned    |NO   |合并版本信息    |
 |STATUS    |varchar(10)    |NO   |状态信息    |
