--- a/zh-CN/700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/11800.oceanbase-dba_ob_backup_set_files-of-mysql-mode.md
+++ b/zh-CN/700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/11800.oceanbase-dba_ob_backup_set_files-of-mysql-mode.md
@@ -28,7 +28,7 @@
 | START_REPLAY_SCN | bigint(20) unsigned | NO | 备份集依赖日志回放 SCN |
 | START_REPLAY_SCN_DISPLAY | datetime(6) | NO | 备份集依赖日志回放时间戳位点 |
 | MIN_RESTORE_SCN | bigint(20) unsigned | NO | 备份集最新可恢复 SCN |
-| MIN_RESTORE_SCN_DISPLAY | datetime(6) | NO | 备份集最小可恢复时间戳位点 |
+| MIN_RESTORE_SCN_DISPLAY | varchar(4096) | NO | 备份集最小可恢复时间戳位点 |
 | INPUT_BYTES | bigint(20) | YES | 输入字节数 |
 | OUTPUT_BYTES | bigint(20) | YES | 输出字节数 |
 | OUTPUT_RATE_BYTES | decimal(28,4) | NO | 每秒输出字节数 |
