--- a/zh-CN/700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/7100.oceanbase-dba_tab_partitions-of-mysql-mode.md
+++ b/zh-CN/700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/7100.oceanbase-dba_tab_partitions-of-mysql-mode.md
@@ -58,7 +58,7 @@
 | READ_ONLY             | varchar(4)      | NO         | 指示子分区是否为只读：<li>YES：子分区的默认设置是只读的<li>NO：子分区的默认设置是读/写                        |
 | INMEMORY              | varchar(8)      | NO         | 指示是否为此子分区启用内存中列存储（IM 列存储）：<li> ENABLED：启用<li>DISABLED：禁用                    |
 | INMEMORY_PRIORITY     | varchar(8)      | NO         | 指示内存中列存储（IM 列存储）填充的优先级。取值：<li>LOW<li>MEDIUM<li>HIGH<li>CRITICAL<li>NONE<li>NULL                      |
-| INMEMORY_DISTRIBUTE   | varchar(15)     | NO         | 指示 IM 列存储在 Real Application Clusters (RAC) 环境中的分布方式：<li>AUTO<li>BY ROWID RANGE<li>BY PARTITION<li>BY SUBPARTITION                        |
+| INMEMORY_DISTRIBUTE   | varchar(15)     | NO         | 指示 IM 列存储在 Real Application Clusters (RAC) 环境中的分布方式：<li>AUTO<li>BY ROWID RANGE<li>DBY PARTITION<li>BY SUBPARTITION                        |
 | INMEMORY_COMPRESSION  | varchar(17)     | NO         | 指示 IM 列存储的压缩级别：<li>NO MEMCOMPRESS<li>FOR DML<li>FOR QUERY \[ LOW | HIGH \]<li>FOR CAPACITY \[ LOW | HIGH \]<li>AUTO<li>NULL <br>该值基于表中段所在的位置。例如：如果表已分区并启用了 IM 列存储，则对于 ALL_TABLES 值为NULL，对于 ALL_TAB_SUBPARTITIONS 值为非 NULL             |
 | INMEMORY_DUPLICATE    | varchar(13)     | NO         | 指示 RAC 环境中 IM 列存储的重复设置：<li>DUPLICATE<li>NO DUPLICATE<li>DUPLICATE ALL                        |
 | CELLMEMORY            | varchar(24)     | NO         | 存储单元闪存缓存中的列压缩值。取值：<li>ENABLED：Exadata Storage 将自动决定是否以列形式缓存<li>DISABLED：Exadata 存储被阻止以列形式缓存<li>NO CACHECOMPRESS：Exadata 存储将以 HCC 格式缓存（无需重新压缩）<li>FOR QUERY：Exadata Storage 将以 INMEMORY 查询高格式重新压缩和缓存<li>FOR CAPACITY：Exadata Storage 将以 INMEMORY 容量低格式重新压缩和缓存<br>此列主要与 Exadata 一起使用                        |
