--- a/zh-CN/700.reference/700.system-views/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/6900.v-sql_audit-of-mysql-mode.md
+++ b/zh-CN/700.reference/700.system-views/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/6900.v-sql_audit-of-mysql-mode.md
@@ -2,7 +2,7 @@
 
 ## 功能
 
-展示当前 OBServer 节点的每一次 SQL 请求的来源、执行状态等统计信息。
+展示当前 OBServer 节点的每一次 SQL 请求的来源、执行状态等统计信息。该视图是按照租户拆分的，除了系统租户，其他租户不能跨租户查询。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
