--- a/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/200.dictionary-view-of-oracle-mode/22900.dba_ob_backup_storage_info_history-of-oracle-mode.md
+++ b/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/200.dictionary-view-of-oracle-mode/22900.dba_ob_backup_storage_info_history-of-oracle-mode.md
@@ -17,7 +17,7 @@
 | PATH | VARCHAR2(1024) | NO | 备份的根路径 |
 | ENDPOINT | VARCHAR2(256) | NO | 对象存储访问需要设置的 HOST |
 | DEST_ID | NUMBER(38) | YES | 备份目的地的编号 |
-| DEST_TYPE | VARCHAR2(64) | YES | 备份目的地的类型：日志归档 |
+| DEST_TYPE | VARCHAR2(64) | YES | 备份目的地的类型，包括：<li>日志归档<li>数据备份 |
 | AUTHORIZATION | VARCHAR2(1024) | NO | 对象存储的授权信息 |
 | EXTENSION | VARCHAR2(512) | NO | 备份目的地的其余参数 |
 | CHECK_FILE_NAME | VARCHAR2(256) | YES | 连通性的校验文件名 |
