--- a/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/300.performance-view-of-oracle-mode/5400.v-memstore-of-oracle-mode.md
+++ b/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/300.performance-view-of-oracle-mode/5400.v-memstore-of-oracle-mode.md
@@ -20,4 +20,4 @@
 | FREEZE_TRIGGER | NUMBER(38)   | NO             | 触发 Memtable 冻结的内存大小，单位为字节        |
 | FREEZE_CNT     | NUMBER(38)   | NO             | Memtable 的冻结次数                   |
 | MEMSTORE_USED  | NUMBER(38)   | NO             | MemTable 目前使用的总内存大小，单位为字节        |
-| MEM_LIMIT      | NUMBER(38)   | NO             | Memtable 的内存大小限制，单位为字节           |
+| MEM_LIMIT      | NUMBER(38)   | NO             | MemTable 的内存大小限制，单位为字节           |
