--- a/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/300.performance-view-of-oracle-mode/7200.v-system_event-of-oracle-mode.md
+++ b/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/300.performance-view-of-oracle-mode/7200.v-system_event-of-oracle-mode.md
@@ -24,5 +24,5 @@
 | TOTAL_WAITS | NUMBER | NO | 该等待事件的总等待次数 |
 | TOTAL_TIMEOUTS | NUMBER | NO | 该等待事件的总超时次数 |
 | TIME_WAITED | NUMBER | NO | 该等待事件的总等待时间，单位为 10 ms |
-| AVERAGE_WAIT | NUMBER | NO | 该等待事件的平均等待事件，单位为 10 ms |
+| AVERAGE_WAIT | NUMBER | NO | 该等待事件的平均等待时间，单位为 10 ms |
 | TIME_WAITED_MICRO | NUMBER | NO | 该等待事件的总等待时间（微秒） |
