--- a/zh-CN/700.reference/1400.oceanbase-tools/100.oceanbase-migration-assessment.md
+++ b/zh-CN/700.reference/1400.oceanbase-tools/100.oceanbase-migration-assessment.md
@@ -1,10 +1,10 @@
 # OceanBase 迁移评估（OMA）
 
-OceanBase 迁移评估 （OceanBase Migration Assessment，OMA）是 OceanBase 提供的数据库迁移评估的产品，为数据迁移提供精准的兼容性评估、高效的性能评估以及应用逻辑改造建议。OMA 支持评估 Oracle、DB2 LUW、PostgreSQL 等多种数据库与 OceanBase 的兼容情况，提供画像分析和自动转换方案；支持应用负载回放功能，帮助客户预知迁移后可能的性能风险并提供优化方案；OMA 还支持评估 C、Java 业务代码以及驱动的兼容性以助力用户高效率、低成本迁移至OceanBase。
+OceanBase 迁移评估（OceanBase Migration Assessment，OMA）是 OceanBase 迁移服务（OceanBase Migration Service，OMS）提供的数据库兼容性评估工具。
 
 ## 兼容性评估
 
-目前 OMA 支持评估 Oracle、MySQL、PostgreSQL、TiDB、DB2 LUW、RDS MySQL、Polar MySQL、Polar O 和 DRDS 实例转换至 OceanBase 数据库的兼容性，并出具兼容性报告。对于 Oracle 和 MySQL 实例的评估，评估报告中会显示不兼容的具体原因和修改建议。对于其它类型实例的评估，仅会显示不兼容的具体原因。
+目前 OMA 支持评估 Oracle、MySQL、PostgreSQL、TiDB、DB2 LUW、RDS MySQL、Polar MySQL、Polar O、DRDS、MSSQL、openGauss，以及 OceanBase 实例（包括 MySQL 和 Oracle 租户）实例转换至 OceanBase 数据库的兼容性，并出具兼容性报告。对于 Oracle 和 MySQL 实例的评估，评估报告中会显示不兼容的具体原因和修改建议。对于其它类型实例的评估，仅会显示不兼容的具体原因。
 
 OMA 支持数据库对象评估、数据库 SQL 或 PL 语句评估，以及整库评估：
 
