--- a/zh-CN/700.reference/1400.oceanbase-tools/400.oceanbase-developer-center.md
+++ b/zh-CN/700.reference/1400.oceanbase-tools/400.oceanbase-developer-center.md
@@ -8,7 +8,7 @@ ODC 采用成熟的浏览器-服务端架构，拥有跨平台、轻量化和易
 
 OceanBase 开发者中心（OceanBase Developer Center，ODC）作为为 OceanBase 数据库量身打造的企业级数据库开发平台，拥有编辑和管理数据库对象与资源等特性。
 
-### 数据库对象管理 
+### 数据库对象管理
 
 * 引导式创建和可视化修改各类数据库对象。
 
@@ -20,7 +20,7 @@ OceanBase 开发者中心（OceanBase Developer Center，ODC）作为为 OceanBa
 
 * 人性化引导式全流程设计，降低了使用分区功能的门槛。
 
-### Web 控制台 
+### Web 控制台
 
 * 支持 DDL、DML 和数据的安全变更。
 
@@ -30,13 +30,13 @@ OceanBase 开发者中心（OceanBase Developer Center，ODC）作为为 OceanBa
 
 * 提供类似Excel的可视化数据编辑能力。
 
-## 数据导入导出 
+### 数据导入导出
 
 * 为 OceanBase 量身打造的高效的数据导入导出能力。
 
 * 支持多种文件格式的导入导出。
 
-### 数据库变量编辑 
+### 数据库变量编辑
 
 * 支持会话变量和系统全局变量的可视化修改。
 
@@ -44,9 +44,8 @@ OceanBase 开发者中心（OceanBase Developer Center，ODC）作为为 OceanBa
 
 * 提升根据业务场景定制变量的效率。
 
+### 资源性能
 
-### 资源性能 
-
-* 实时进行数据库会话访问情况管控，且支持查看和终止会话。 
+* 实时进行数据库会话访问情况管控，且支持查看和终止会话。
 
 * 支持 SQL 执行计划分析，指导 SQL 调优。
