--- a/zh-CN/700.reference/1400.oceanbase-tools/700.oceanbase-deployer.md
+++ b/zh-CN/700.reference/1400.oceanbase-tools/700.oceanbase-deployer.md
@@ -1,13 +1,7 @@
 # OceanBase Deployer（OBD）
 
-OBD 全称为 OceanBase Deployer，是 OceanBase 开源软件的安装部署工具。OBD 同时也是包管理器，可以用来管理 OceanBase 所有的开源软件。
+OBD 全称为 OceanBase Deployer，是 OceanBase 集群安装部署工具，通过命令行部署或白屏界面部署的方式，将复杂配置流程标准化，降低集群部署难度。详细操作请参考 [使用命令行部署 OceanBase 数据库生产环境](../../400.deploy/500.deploy-oceanbase-database-community-edition/200.local-deployment/500.deploy-OceanBase-database-of-multi-node-cluster.md) 和 [通过 OBD 白屏部署 OceanBase 集群](../../400.deploy/500.deploy-oceanbase-database-community-edition/200.local-deployment/400.deploy-by-ui/100.deploy-by-obd.md)。
 
-OBD 的主要功能包括：
+其中，命令行支持编辑配置文件，可以更加灵活的进行配置调整，适用于需要深度了解 OceanBase 的用户，有一定的使用门槛；白屏界面配置简单，通过页面的引导配置即可完成集群部署，适用于需要快速体验，构建标准环境的用户。
 
-* 通过 obd demo 命令快速部署 OceanBase 数据库社区版体验环境
-
-* 部署 OceanBase 数据库社区版生产环境
-
-* 为 OceanBase 集群增加白屏监控
-
-* 提供集群管理命令
+在集群部署之外，OBD 还提供了包管理器、压测软件、集群管理等常用的运维能力，更好的支持用户体验使用 OceanBase 分布式数据库。
