--- a/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/300.performance-view-of-oracle-mode/12200.gv_ob_locks-of-oracle-mode.md
+++ b/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/300.performance-view-of-oracle-mode/12200.gv_ob_locks-of-oracle-mode.md
@@ -11,8 +11,9 @@
 
 ## 字段说明
 
-| SVR_IP | VARCHAR2(46) | NO | 持锁或请求锁的 OBServer 节点的 IP 地址 |
+| **字段** | **类型** | **是否为 NULL** | **描述** |
 | --- | --- | --- | --- |
+| SVR_IP | VARCHAR2(46) | NO | 持锁或请求锁的 OBServer 节点的 IP 地址 |
 | SVR_PORT | NUMBER(38) | NO | 持锁或请求锁的 OBServer 节点的端口号 |
 | TENANT_ID | NUMBER(38) | NO | 持锁或请求锁的租户的 ID |
 | TRANS_ID | NUMBER(38) | NO | 持锁或请求锁的事务 ID |
