--- a/zh-CN/700.reference/500.system-reference/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/2400.gv-memory-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.system-reference/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/2400.gv-memory-of-mysql-mode.md
@@ -19,3 +19,26 @@ GV$OB_MEMORY
 | COUNT       | decimal(20,0) | NO             | 内存分配与释放的差值，即当前该 Mod 使用中的内存单元个数 |
 | HOLD        | decimal(20,0) | NO             | 该 Mod 当前占有的内存大小        |
 | USED        | decimal(20,0) | NO             | 该 Mod 当前使用的内存数值，单位：Byte        |
+
+V4.x 版本中有关内存 CTX 的名称和含义如下：
+
+| CTX_NAME | 描述 |
+|----------|------|
+| DEFAULT_CTX_ID | 未划分的内存集合  |
+| MEMSTORE_CTX_ID | 用户 Memtable 数据  |
+| TRANS_CTX_MGR_ID | 事务上下文  |
+PLAN_CACHE_CTX_ID |执行计划缓存 |
+| GLIBC | 使用 Glibc Malloc 接口申请的内存  |
+| CO_STACK | 线程执行栈内存  |
+| KVSTORE_CACHE_ID | 动态可伸缩缓存  |
+| META_OBJ_CTX_ID | 存储元数据内存，如宏块 Meta 等  |
+| TX_CALLBACK_CTX_ID | 指事务回调上下文ID。用于记录事务执行过程中的部分修改，在事务提交或者回滚时可以找到对应数据做操作  |
+| LOB_CTX_ID | 用来标记 ObLobManager 里面的 allocator |
+| PS_CACHE_CTX_ID | `PREPARE stmt_name FROM preparable_stmt` 语句的缓存  |
+| TX_DATA_TABLE | 事务数据表。存放了已决事务的状态，用于转储未提交、fast commit等场景的查询  |
+| MDS_DATA_ID  | 多源数据的内存 |
+| LIBEASY | 网络框架内存（easy）  |
+| LOGGER_CTX_ID | 程序日志内存  |
+| RPC_CTX_ID | RPC 框架内存  |
+| PKT_NIO |  网络框架内存（pkt_nio） |
+| SCHEMA_SERVICE | Schema 元信息内存，如表、库等  |
