--- a/zh-CN/700.reference/300.performance-tuning-guide/200.performance-related-tools/200.internal-table/300.gv-ob_transaction_participants.md
+++ b/zh-CN/700.reference/300.performance-tuning-guide/200.performance-related-tools/200.internal-table/300.gv-ob_transaction_participants.md
@@ -2,7 +2,7 @@
 
 ## 功能
 
-`GV$OB_TRANSACTION_PARTICIPANTS` 视图用于展示正在进行的事务参与者状态信息。
+`GV$OB_TRANSACTION_PARTICIPANTS` 视图用于展示所有 OBServer 节点上活跃事务的参与者信息。
 
 ## 字段说明
 
