--- a/zh-CN/700.reference/500.system-reference/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/100.performance-view-overview-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.system-reference/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/100.performance-view-overview-of-mysql-mode.md
@@ -12,7 +12,7 @@
 | [GV$OB_COMPACTION_DIAGNOSE_INFO](../300.performance-view-of-mysql-mode/200.gv-ob_compaction_diagnose_info-of-mysql-mode.md)   | 展示 COMPACTION 的诊断信息。                                      |
 | [GV$OB_TABLET_COMPACTION_HISTORY](../300.performance-view-of-mysql-mode/1000.gv-ob_tablet_compaction_history-of-mysql-mode.md)  | 展示 TABLET 级 COMPACTION 的历史信息。                             |
 | [GV$OB_TABLET_COMPACTION_PROGRESS](../300.performance-view-of-mysql-mode/1100.gv-ob_tablet_compaction_progress-of-mysql-mode.md) | 展示 TABLET 级 COMPACTION 的进度信息。                             |
-| [GV$OB_TRANSACTION_PARTICIPANTS](../300.performance-view-of-mysql-mode/1200.gv-ob_transaction_participants-of-mysql-mode.md)   | 展示所有 OBServer 节点上的事务参与者信息。                                  |
+| [GV$OB_TRANSACTION_PARTICIPANTS](../300.performance-view-of-mysql-mode/1200.gv-ob_transaction_participants-of-mysql-mode.md)   | 展示所有 OBServer 节点上活跃事务的参与者信息。                                  |
 | [GV$SESSION_EVENT](../300.performance-view-of-mysql-mode/1600.gv-session_event-of-mysql-mode.md)                 | 用于展示集群内所有 OBServer 节点的 Session 级别等待事件。                      |
 | [GV$SESSION_WAIT](../300.performance-view-of-mysql-mode/1700.gv-session_wait-of-mysql-mode.md)                  | 该视图用于展示所有服务器上所有 Session 的当前或者上一次等待事件的一些信息，包括等待事件名称、等待耗时等。 |
 | [GV$SESSION_WAIT_HISTORY](../300.performance-view-of-mysql-mode/1800.gv-session_wait_history-of-mysql-mode.md)          | 用于展示所有服务器上所有 Session 的最近 10 次等待事件的信息。                     |
@@ -27,7 +27,7 @@
 | [V$OB_COMPACTION_DIAGNOSE_INFO](../300.performance-view-of-mysql-mode/4400.v-ob_compaction_diagnose_info-of-mysql-mode.md)    | 展示 COMPACTION 的诊断信息。                                      |
 | [V$OB_TABLET_COMPACTION_HISTORY](../300.performance-view-of-mysql-mode/5200.v-ob_tablet_compaction_history-of-mysql-mode.md)   | 展示 TABLET 级 COMPACTION 的历史信息。                             |
 | [V$OB_TABLET_COMPACTION_PROGRESS](../300.performance-view-of-mysql-mode/5300.v-ob_tablet_compaction_progress-of-mysql-mode.md)  | 展示 TABLET 级 COMPACTION 的进度信息。                             |
-| [V$OB_TRANSACTION_PARTICIPANTS](../300.performance-view-of-mysql-mode/5400.v-ob_transaction_participants-of-mysql-mode.md)    | 展示所有 OBServer 节点上的事务参与者信息。                                  |
+| [V$OB_TRANSACTION_PARTICIPANTS](../300.performance-view-of-mysql-mode/5400.v-ob_transaction_participants-of-mysql-mode.md)    | 展示所有 OBServer 节点上活跃事务的参与者信息。                                  |
 | [V$STATNAME](../300.performance-view-of-mysql-mode/5600.v-statname-of-mysql-mode.md)                       | 用于展示所有统计事件的相关定义。                                          |
 | [V$EVENT_NAME](../300.performance-view-of-mysql-mode/5700.v-event_name-of-mysql-mode.md)                     | 当前 OBServer 节点上所有统计事件的相关定义。                                 |
 | [v$V$SESSION_WAIT](../300.performance-view-of-mysql-mode/5900.v-session_wait-of-mysql-mode.md)                   | 每个 Session 当前等待事件明细，按照约定，每个等待事件会有三个参数，各自会记录对应的值。          |
