--- a/zh-CN/700.reference/500.system-reference/500.system-view-of-oracle-mode/300.performance-view-of-oracle-mode/100.performance-view-overview-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.system-reference/500.system-view-of-oracle-mode/300.performance-view-of-oracle-mode/100.performance-view-overview-of-oracle-mode.md
@@ -131,7 +131,7 @@
 | [GV$OB_COMPACTION_DIAGNOSE_INFO](../300.performance-view-of-oracle-mode/200.gv-ob_compaction_diagnose_info-of-oracle-mode.md)   | 展示 COMPACTION 的诊断信息。                             |
 | [GV$OB_TABLET_COMPACTION_HISTORY](../300.performance-view-of-oracle-mode/900.gv-ob_tablet_compaction_history-of-oracle-mode.md)  | 展示 TABLET 级 COMPACTION 的历史信息。                    |
 | [GV$OB_TABLET_COMPACTION_PROGRESS](../300.performance-view-of-oracle-mode/1000.gv-ob_tablet_compaction_progress-of-oracle-mode.md) | 展示 TABLET 级 COMPACTION 的进度信息。                    |
-| [GV$OB_TRANSACTION_PARTICIPANTS](../300.performance-view-of-oracle-mode/1100.gv-ob_transaction_participants-of-oracle-mode.md)   | 展示所有 OBServer 节点上的事务参与者信息。                         |
+| [GV$OB_TRANSACTION_PARTICIPANTS](../300.performance-view-of-oracle-mode/1100.gv-ob_transaction_participants-of-oracle-mode.md)   | 展示所有 OBServer 节点上活跃事务的参与者信息。                        |
 | [GV$SYSTEM_EVENT](../300.performance-view-of-oracle-mode/3500.gv-system_event-of-oracle-mode.md)                  | 展示所有服务器上租户系统级别的一些等待事件，统计每一类等待事件的发生次数、等待时间、超时次数等。 |
 | [GV$GLOBAL_TRANSACTION](../300.performance-view-of-oracle-mode/3600.gv-global_transaction-of-oracle-mode.md)            | 显示当前活跃的全局事务的信息。                                  |
 | [V$OB_COMPACTION_PROGRESS](../300.performance-view-of-oracle-mode/4100.v-ob_compaction_progress-of-oracle-mode.md)         | 展示租户的 Server 级合并进度信息。                            |
@@ -139,7 +139,7 @@
 | [V$OB_COMPACTION_DIAGNOSE_INFO](../300.performance-view-of-oracle-mode/4000.v-ob_compaction_diagnose_info-of-oracle-mode.md)    | 展示 COMPACTION 的诊断信息。                             |
 | [V$OB_TABLET_COMPACTION_HISTORY](../300.performance-view-of-oracle-mode/4700.v-ob_tablet_compaction_history-of-oracle-mode.md)   | 展示 TABLET 级 COMPACTION 的历史信息。                    |
 | [V$OB_TABLET_COMPACTION_PROGRESS](../300.performance-view-of-oracle-mode/4800.v-ob_tablet_compaction_progress-of-oracle-mode.md)  | 展示 TABLET 级 COMPACTION 的进度信息。                    |
-| [V$OB_TRANSACTION_PARTICIPANTS](../300.performance-view-of-oracle-mode/4900.v-ob_transaction_participants-of-oracle-mode.md)    | 展示所有 OBServer 节点上的事务参与者信息。                         |
+| [V$OB_TRANSACTION_PARTICIPANTS](../300.performance-view-of-oracle-mode/4900.v-ob_transaction_participants-of-oracle-mode.md)    | 展示所有 OBServer 节点上活跃事务的参与者信息。                         |
 | [V$SYSTEM_EVENT](../300.performance-view-of-oracle-mode/7200.v-system_event-of-oracle-mode.md)                   | 展示当前服务器上租户系统级别的一些等待事件，统计每一类等待事件的发生次数、等待时间、超时次数等。 |
 | [V$GLOBAL_TRANSACTION](../300.performance-view-of-oracle-mode/7500.v-global_transaction-of-oracle-mode.md)             | 显示当前活跃的全局事务的信息。                                  |
 | [GV$OB_GLOBAL_TRANSACTION](../300.performance-view-of-oracle-mode/9900.gv-ob_global_transaction-of-oracle-mode.md)                   | 展示集群中所有 XA 事务的信息。 |
