revise enable_syslog_recycle

--- a/zh-CN/600.manage/800.logging/400.log-control.md
+++ b/zh-CN/600.manage/800.logging/400.log-control.md
@@ -4,7 +4,7 @@
 
 |配置项名|默认值|配置项介绍|
 |---|---|---|
-|`enable_syslog_recycle`|False|用于设置是否开启日志文件回收。<ul><li>True：开启日志文件回收。</li><li>False：关闭日志文件回收。</li></ul>|
+|`enable_syslog_recycle`|False| 用于设置是否开启回收系统日志的功能。<ul><li>True：开启日志文件回收。</li><li>False：关闭日志文件回收。</li></ul>|
 |`enable_syslog_wf`|True|用于设置是否把 WARN 以上级别的系统日志打印到一个单独的日志文件（日志文件的后缀为 `wf`）中。|
 |`enable_async_syslog`|True|用于设置是否为 `observer.log`、`elec.log` 和 `rs.log` 启用系统日志异步写。|
 |`max_syslog_file_count`|0|用于设置在回收日志文件之前可以容纳的最大日志文件数量。</br>每个日志文件最多可以占用 256 MB 的磁盘空间。当该配置项的值为 0 时，不会删除任何日志文件。</br>该配置项的参数类型为整形，取值范围为 [0, +∞)。|
