--- a/zh-CN/700.reference/100.oceanbase-database-concepts/800.transaction-management/100.transaction/100.transaction-introduction.md
+++ b/zh-CN/700.reference/100.oceanbase-database-concepts/800.transaction-management/100.transaction/100.transaction-introduction.md
@@ -20,9 +20,8 @@
   
 * 隔离性
 
-  OceanBase 数据库支持 Oracle 和 MySQL 兼容模式。在 Oracle 模式下，支持 Read Committed 隔离级别和 Serializable 隔离级别。在 MySQL 模式下，支持 Read Committed 隔离级别和 Repeatable Read 隔离级别。
+  OceanBase 数据库支持 Oracle 和 MySQL 兼容模式。在 Oracle 模式下，支持 Read Committed 隔离级别和 Serializable 隔离级别。在 MySQL 模式下，支持 Read Committed 隔离级别、 Repeatable Read 隔离级别和 Serializable 隔离级别。
   
 * 持久化
 
   对于单个机器来说，OceanBase 数据库通过 redo log 记录了数据的修改，通过 WAL 机制保证在宕机重启之后能够恢复出来。保证事务一旦提交成功，事务数据一定不会丢失。对于整个集群来说，OceanBase 数据库通过 paxos 协议将数据同步到多个副本，只要多数派副本存活事务数据一定不会丢失。
-  
