--- a/zh-CN/700.reference/100.oceanbase-database-concepts/800.transaction-management/100.transaction/100.transaction-introduction.md
+++ b/zh-CN/700.reference/100.oceanbase-database-concepts/800.transaction-management/100.transaction/100.transaction-introduction.md
@@ -20,7 +20,7 @@
   
 * 隔离性
 
-  OceanBase 数据库支持 Oracle 和 MySQL 兼容模式。在 Oracle 模式下，支持 Read Committed 隔离级别和 Serializable 隔离级别。在 MySQL 模式下，支持 Read Committed 隔离级别和 Repeatable Read 隔离级别。
+  OceanBase 数据库支持 Oracle 和 MySQL 兼容模式。在 Oracle 模式下，支持 Read Committed 隔离级别和 Serializable 隔离级别。在 MySQL 模式下，支持 Read Committed 隔离级别、Repeatable Read 隔离级别和 Serializable 隔离级别。
   
 * 持久化
 
