revise V$OB_PLAN_CACHE_PLAN_STAT

--- a/zh-CN/600.manage/700.monitor/200.monitor-items-introduction/300.sql-monitor/300.execution-plan.md
+++ b/zh-CN/600.manage/700.monitor/200.monitor-items-introduction/300.sql-monitor/300.execution-plan.md
@@ -75,7 +75,7 @@ obclient> select * from GV$OB_PLAN_CACHE_PLAN_EXPLAIN where tenant_id=1 and svr_
 * `OUTLINE_ID`：是否命中用户创建的 Outline ID，为 `-1` 表示不是通过绑定 Outline 生成的计划。
 * `OUTLINE_DATA`：计划对应的 Outline 信息。
 * `TABLE_SCAN`：该查询是否为主键扫描。
-* `EVOLUTION`：该执行计划是否在演进中。
-* `EVO_EXECUTIONS`：演进次数。
+* `EVOLUTION`：该执行计划是否在 SPM 的演进计划中。
+* `EVO_EXECUTIONS`：SPM 计划的演进次数。
 * `PS_STMT_ID`：Prepare Statement 的 ID。
 
