--- a/zh-CN/700.reference/500.system-reference/500.system-view-of-oracle-mode/300.performance-view-of-oracle-mode/5900.v-plan_cache_plan_stat-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.system-reference/500.system-view-of-oracle-mode/300.performance-view-of-oracle-mode/5900.v-plan_cache_plan_stat-of-oracle-mode.md
@@ -63,9 +63,9 @@ V$OB_PLAN_CACHE_PLAN_STAT
 | HINTS_ALL_WORKED      | NUMBER(38)                        | NO             | SQL 计划中的 Hint 是否都已经生效                                                                                                                                                                                                                                                                                                                                                                                                                              |
 | ACS_SEL_INFO          | CLOB                              | NO             | 当前 ACS 计划对应的选择率空间                                                                                                                                                                                                                                                                                                                                                                                                                                  |
 | TABLE_SCAN            | NUMBER(38)                        | NO             | 表示该查询是否为主键扫描                                                                                                                                                                                                                                                                                                                                                                                                                                       |
-| EVOLUTION             | NUMBER(38)                        | NO             | 表示该执行计划是否在演进中                                                                                                                                                                                                                                                                                                                                                                                                                                      |
-| EVO_EXECUTIONS        | NUMBER(38)                        | NO             | 演进次数                                                                                                                                                                                                                                                                                                                                                                                                                                               |
-| EVO_CPU_TIME          | NUMBER(38)                        | NO             | 演进过程中总的执行 CPU 时间                                                                                                                                                                                                                                                                                                                                                                                                                                   |
+| EVOLUTION             | NUMBER(38)                        | NO             | 该执行计划是否在 SPM 的演进计划中                                                                                                                                                                                                                                                                                                                                                                                                                                      |
+| EVO_EXECUTIONS        | NUMBER(38)                        | NO             | SPM 计划的演进次数                                                                                                                                                                                                                                                                                                                                                                                                                                               |
+| EVO_CPU_TIME          | NUMBER(38)                        | NO             | 计划演进过程中总的 CPU 执行时间                                                                                                                                                                                                                                                                                                                                                                                                                                   |
 | TIMEOUT_COUNT         | NUMBER(38)                        | NO             | 超时次数                                                                                                                                                                                                                                                                                                                                                                                                                                               |
 | PS_STMT_ID            | NUMBER(38)                        | NO             | 请求对应的 Prepare ID： <li> `-1`：表示 SQL 语句没有使用 PS 协议   <li> 非 `-1`：表示 SQL 语句使用了 PS 协议，表示 PS 协议对该语句返回的唯一标志                                                                                                                                                                                                                                                  |
 | SESSID                | NUMBER(38)                        | NO             | 缓存对象所在的 Session ID                                                                                                                                                                                                                                                                                                                                                                                                                                 |
