--- a/zh-CN/700.reference/500.system-reference/500.system-view-of-oracle-mode/200.dictionary-view-of-oracle-mode/100.dictionary-view-overview-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.system-reference/500.system-view-of-oracle-mode/200.dictionary-view-of-oracle-mode/100.dictionary-view-overview-of-oracle-mode.md
@@ -249,7 +249,7 @@
 
 |                                         视图名                                         |                    功能描述                     |
 |-------------------------------------------------------------------------------------|---------------------------------------------|
-| [DBA_OB_DEADLOCK_EVENT_HISTORY](../200.dictionary-view-of-oracle-mode/23100.dba_ob_deadlock_event_history-of-oracle-mode.md) | 展示死锁事件的历史记录，该视图在非 root 租户下展示本租户的历史记录。                          |
+| [DBA_OB_DEADLOCK_EVENT_HISTORY](../200.dictionary-view-of-oracle-mode/23100.dba_ob_deadlock_event_history-of-oracle-mode.md) | 展示死锁事件的历史记录，该视图在非 SYS 租户下展示本租户的历史记录。                          |
 
 ## 序列
 
