--- a/zh-CN/600.manage/600.backup-and-recovery/300.log-archive/400.close-the-log-archive-mode.md
+++ b/zh-CN/600.manage/600.backup-and-recovery/300.log-archive/400.close-the-log-archive-mode.md
@@ -28,10 +28,10 @@
      obclient [(none)]> SELECT TENANT_NAME, LOG_MODE FROM oceanbase.DBA_OB_TENANTS WHERE TENANT_TYPE='USER'\G
      *************************** 1. row ***************************
      TENANT_NAME: mysql_tenant
-        LOG_MODE: ARCHIVELOG
+        LOG_MODE: NOARCHIVELOG
      *************************** 2. row ***************************
      TENANT_NAME: oracle_tenant
-        LOG_MODE: ARCHIVELOG
+        LOG_MODE: NOARCHIVELOG
      2 rows in set
      ```
 
