--- a/en-US/700.reference/500.system-reference/100.system-configuration-items/400.tenant-level-configuration-items/1000.enable_monotonic_weak_read.md
+++ b/en-US/700.reference/500.system-reference/100.system-configuration-items/400.tenant-level-configuration-items/1000.enable_monotonic_weak_read.md
@@ -7,7 +7,7 @@ enable_monotonic_weak_read specifies whether to enable monotonic reads.
 | **Property** | **Description** |
 |------------------|--------------------------------------------------------------------------------------------------------|
 | Type | Boolean |
-| Default value | False |
+| Default value | True |
 | Valid values | <li> True   <li> False |
 | Effective upon an OBServer restart | No |
 
