--- a/zh-CN/700.reference/100.oceanbase-database-concepts/800.transaction-management/200.transaction-concurrency-and-consistency/500.weak-consistency-reading.md
+++ b/zh-CN/700.reference/100.oceanbase-database-concepts/800.transaction-management/200.transaction-concurrency-and-consistency/500.weak-consistency-reading.md
@@ -129,7 +129,7 @@ V2.2.x 之前的版本仅支持 Proxy 级别的单调读，即只要客户端始
 
 |                 名称                  | 范围  |           语义           |
 |-------------------------------------|-----|------------------------|
-| enable_monotonic_weak_read          | 租户级 | 是否开启单调读，默认为 false      |
+| enable_monotonic_weak_read          | 租户级 | 是否开启单调读，默认为 True      |
 | max_stale_time_for_weak_consistency | 租户级 | 弱一致性读最大落后时间，默认值是 5 秒   |
 | weak_read_version_refresh_interval  | 集群级 | 弱一致性读版本号刷新周期，默认值 50 毫秒 |
 
