--- a/zh-CN/700.reference/200.administrator-guide/100.database-connection-and-routing/700.route-management/400.odp-routing-policy/100.read-write-splitting.md
+++ b/zh-CN/700.reference/200.administrator-guide/100.database-connection-and-routing/700.route-management/400.odp-routing-policy/100.read-write-splitting.md
@@ -26,7 +26,7 @@
 OceabBase 的 SQL 提供了弱读 hint `/*+READ_CONSISTENCY(WEAK)*/`，在 SQL 中添加该 `hint` 后，就可以开启弱读功能。
 
 ```sql
-select /*+READ_CONSISTENCY(WEAK)*/ from t1;
+select /*+READ_CONSISTENCY(WEAK)*/ * from t1;
 ```
 
 #### 通过配置项设置
